Read NQE prefs to network quality store under all cases

In Network Quality Estimator (NQE), change the logic to read the
prefs even if caching is not enabled via finch trial. If the caching
is  disabled, the network quality store is not queried by NQE.

BUG=688121
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.android:android_cronet_tester

Review-Url: https://codereview.chromium.org/2672733002
Cr-Commit-Position: refs/heads/master@{#448118}

Former-commit-id: 4ff2bf0b92b736c30c01f584ee41fd10f19f63a8